--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@sveltejs/kit": "^1.20.2",
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "@tsconfig/svelte": "^4.0.1",
-    "@types/jsonwebtoken": "^9.0.2",
     "svelte": "^3.58.0",
     "svelte-check": "^3.3.1",
+    "svelte-mui": "^0.5.7",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
